--- a/calcProject/style.css
+++ b/calcProject/style.css
@@ -24,6 +24,8 @@ body {
   background-color: rgb(236, 240, 243);
 }
 .container .calculator {
+  width: -moz-max-content;
+  width: max-content;
   background-color: rgb(240, 240, 240);
   padding: 2rem;
   display: flex;
@@ -42,8 +44,7 @@ body {
   border-radius: 12px;
   font-size: 2rem;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: end;
   box-shadow: inset 5px 5px 10px rgba(163, 177, 198, 0.5), inset -5px -5px 10px rgba(255, 255, 255, 0.8), 2px 2px 2px #fff, -2px -2px 2px rgba(163, 177, 198, 0.5);
   color: rgba(50, 60, 70, 0.9);
 }
