--- a/calcProject/style.scss
+++ b/calcProject/style.scss
@@ -25,6 +25,7 @@ body {
     background-color: rgba(236, 240, 243, 1);
 
     .calculator {
+        width: max-content;
         background-color: rgba(240, 240, 240, 1);
         padding: 2rem;
         display: flex;
@@ -47,13 +48,12 @@ body {
             border-radius: 12px;
             font-size: 2rem;
             display: flex;
-            justify-content: flex-end;
-            align-items: center;
+            justify-content: end;
             box-shadow: inset 5px 5px 10px rgba(163, 177, 198, 0.5),
             inset -5px -5px 10px rgba(255, 255, 255, 0.8),
             2px 2px 2px #fff,
             -2px -2px 2px rgba(163, 177, 198, 0.5);
-            color: rgba(50, 60, 70, 0.9)
+            color: rgba(50, 60, 70, 0.9); 
         }
 
         .button-container {
