--- a/Note-app-usingOOP/style.css
+++ b/Note-app-usingOOP/style.css
@@ -1,1 +1,157 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: "inter";
+  background: linear-gradient(to right, #0F172A, #1E293B);
+  color: #E2E8F0;
+  padding: 8px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  background-color: #1E293B !important;
+  color: #E2E8F0 !important;
+  -webkit-text-fill-color: #E2E8F0 !important;
+  box-shadow: 0 0 0px 1000px #1E293B inset !important;
+  outline: none;
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 4.5fr;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  padding: 1rem;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+}
+main .left-nav {
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 15px;
+  padding: 2rem;
+}
+main .left-nav .container {
+  position: sticky;
+  top: 0;
+}
+main .left-nav h1 {
+  width: 100%;
+  font-size: 2.5rem;
+  text-align: center;
+}
+main .left-nav button {
+  width: 100%;
+  margin-top: 1rem;
+  padding: 0.6rem 0;
+  font-size: 1.2rem;
+  font-weight: 500;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-width: 2px;
+  color: #E2E8F0;
+  border-radius: 5px;
+  background: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+main .left-nav button:hover {
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+main .left-nav .remove-note {
+  background-color: #3B82F6;
+}
+main .left-nav .remove-note:hover {
+  background-color: #60A5FA;
+}
+main .notes-main {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: hidden;
+}
+main .notes-main .notes-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: start;
+}
+main .notes-main .notes-container .search-wrapper {
+  width: 100%;
+  padding: 2rem 3rem;
+}
+main .notes-main .notes-container .search-wrapper input {
+  width: 100%;
+  font-size: 1.3rem;
+  padding: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  color: #E2E8F0;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 5px;
+  transition: all 0.2s ease;
+}
+main .notes-main .notes-container .search-wrapper input:focus {
+  outline: none;
+  border-radius: 15px;
+}
+main .notes-main .notes-container .search-wrapper input:hover {
+  border-radius: 15px;
+}
+main .notes-main .notes-container .notes-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+  padding: 0 3rem;
+  overflow-y: scroll;
+}
+main .notes-main .notes-container .notes-wrapper::-webkit-scrollbar {
+  width: 8px;
+}
+main .notes-main .notes-container .notes-wrapper::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .notes-main .notes-container .notes-wrapper::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 10px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+main .notes-main .notes-container .notes-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+main .notes-main .notes-container .notes-wrapper .note {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1rem;
+  background-color: rgba(255, 255, 255, 0.05);
+  padding: 3rem;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+}
+main .notes-main .notes-container .notes-wrapper .note .note-title h1 {
+  font-size: 2.5rem;
+}
+main .notes-main .notes-container .notes-wrapper .note .note-content p {
+  font-size: 1.2rem;
+}/*# sourceMappingURL=style.css.map */
