--- a/Note-app-usingOOP/style.scss
+++ b/Note-app-usingOOP/style.scss
@@ -24,6 +24,7 @@ body {
     background: $bg-dark;
     color: $text-dark;
     padding: 8px;
+
 }
 
 input:-webkit-autofill,
@@ -46,12 +47,16 @@ main {
     border-radius: 15px;
     padding: 1rem;
     box-shadow: $shadow-dark;
+    position: relative;
+    transition: all 0.3s ease;
+
     .left-nav {
         width: 100%;
         height: 100%;
         background: $bg-card-dark;
         border-radius: 15px;
         padding: 2rem;
+        // display: none;
 
         .container {
             position: sticky;
@@ -99,13 +104,15 @@ main {
         justify-content: center;
         align-items: center;
         overflow-y: hidden;
-        
+        // display: none;
+
         .notes-container {
             display: flex;
             flex-direction: column;
             width: 100%;
             height: 100%;
             align-items: start;
+
             .search-wrapper {
                 width: 100%;
                 padding: 2rem 3rem;
@@ -141,7 +148,7 @@ main {
                 height: 100%;
                 padding: 0 3rem;
                 overflow-y: scroll;
-                
+
                 &::-webkit-scrollbar {
                     width: 8px; // slim and clean
                 }
@@ -165,12 +172,14 @@ main {
                     flex-direction: column;
                     justify-content: center;
                     align-items: flex-start;
+                    width: 100%;
                     gap: 1rem;
                     background-color: $bg-card-dark;
                     padding: 3rem;
                     border: $border-dark;
                     border-radius: 8px;
                     box-shadow: $shadow-dark;
+
                     .note-title {
                         h1 {
                             font-size: 2.5rem;
@@ -181,6 +190,103 @@ main {
                         p {
                             font-size: 1.2rem;
                         }
+                    }
+                }
+            }
+        }
+    }
+
+    .enter-note {
+        position: absolute;
+        display: none;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff00;
+        z-index: 10;
+        backdrop-filter: blur(5px);
+        border-radius: 15px;
+        transition: all 0.3s ease;
+
+        .container {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            input {
+                width: 100%;
+                font-size: 1.3rem;
+                padding: 1rem;
+                border: $border-dark;
+                color: $text-dark;
+                background: $bg-card-dark;
+                border-radius: 5px;
+                transition: all 0.2s ease;
+
+                &:focus {
+                    outline: none;
+                    border-radius: 15px;
+                }
+
+                &:hover {
+                    border-radius: 15px;
+                }
+            }
+
+            textarea {
+                padding: 1rem;
+                width: fit-content;
+                border: $border-dark;
+                color: $text-dark;
+                background: $bg-card-dark;
+                border-radius: 5px;
+                transition: border-radius 0.2s ease;
+                resize: vertical;
+                overflow: auto;
+
+                &:focus {
+                    outline: none;
+                    border-radius: 15px;
+                }
+
+                &:hover {
+                    border-radius: 15px;
+                }
+            }
+
+            .btn-container {
+                width: 100%;
+                display: flex;
+                gap: 1rem;
+
+                button {
+                    width: 100%;
+                    padding: 0.6rem 0;
+                    font-size: 1.2rem;
+                    font-weight: 500;
+                    border: $border-dark;
+                    border-width: 2px;
+                    color: $text-dark;
+                    border-radius: 5px;
+                    background: none;
+                    cursor: pointer;
+                    transition: all 0.3s ease;
+
+                    &:hover {
+                        border-radius: 15px;
+                        background-color: rgba(255, 255, 255, 0.1);
+                    }
+                }
+
+                .close {
+                    background-color: $button-bg-dark;
+
+                    &:hover {
+                        background-color: $button-hover-dark;
                     }
                 }
             }
