--- a/Note-app-usingOOP/style.css
+++ b/Note-app-usingOOP/style.css
@@ -45,6 +45,9 @@ main .left-nav {
   border-radius: 15px;
   padding: 2rem;
 }
+main .left-nav #search {
+  display: none;
+}
 main .left-nav .container {
   position: sticky;
   top: 0;
@@ -67,6 +70,9 @@ main .left-nav button {
   background: none;
   cursor: pointer;
   transition: all 0.3s ease;
+}
+main .left-nav button span {
+  display: none;
 }
 main .left-nav button:hover {
   border-radius: 15px;
@@ -263,4 +269,64 @@ main .enter-note .container .btn-container .close {
 }
 main .enter-note .container .btn-container .close:hover {
   background-color: #60A5FA;
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+  main .left-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  main .left-nav h1 {
+    text-align: Left;
+  }
+  main .left-nav .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  main .left-nav .container #search {
+    display: block;
+    width: 100%;
+    font-size: 1.3rem;
+    padding: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    color: #E2E8F0;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 5px;
+    transition: all 0.2s ease;
+  }
+  main .left-nav .container #search:focus {
+    outline: none;
+    border-radius: 15px;
+  }
+  main .left-nav .container #search:hover {
+    border-radius: 15px;
+  }
+  main .left-nav .container button {
+    margin: 0;
+    height: 100%;
+    padding: 0 1rem;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  main .left-nav .container button p {
+    display: none;
+  }
+  main .left-nav .container button span {
+    display: block;
+  }
+  main .notes-main .notes-container .search-wrapper {
+    display: none;
+  }
+  main .notes-main .notes-container .notes-wrapper {
+    padding: 0;
+  }
+  .notes-main {
+    padding-top: 1rem;
+  }
 }/*# sourceMappingURL=style.css.map */
