--- a/Note-app-usingOOP/style.scss
+++ b/Note-app-usingOOP/style.scss
@@ -38,6 +38,7 @@ input:-webkit-autofill:focus {
     transition: background-color 5000s ease-in-out 0s;
 }
 
+
 main {
     width: 100%;
     height: 100%;
@@ -56,7 +57,11 @@ main {
         background: $bg-card-dark;
         border-radius: 15px;
         padding: 2rem;
+
         // display: none;
+        #search {
+            display: none;
+        }
 
         .container {
             position: sticky;
@@ -82,6 +87,9 @@ main {
             background: none;
             cursor: pointer;
             transition: all 0.3s ease;
+            span {
+                display: none;
+            }
 
             &:hover {
                 border-radius: 15px;
@@ -104,7 +112,6 @@ main {
         justify-content: center;
         align-items: center;
         overflow-y: hidden;
-        // display: none;
 
         .notes-container {
             display: flex;
@@ -312,5 +319,73 @@ main {
                 }
             }
         }
+    }
+}
+
+@media (max-width:768px) {
+    main {
+        grid-template-columns: 1fr;
+        .left-nav {
+            
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            h1 {
+                text-align: Left;
+            }
+        
+            .container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 1rem;
+                #search {
+                    display: block;
+                    width: 100%;
+                    font-size: 1.3rem;
+                    padding: 1rem;
+                    border: $border-dark;
+                    color: $text-dark;
+                    background: $bg-card-dark;
+                    border-radius: 5px;
+                    transition: all 0.2s ease;
+
+                    &:focus {
+                        outline: none;
+                        border-radius: 15px;
+                    }
+
+                    &:hover {
+                        border-radius: 15px;
+                    }
+                }
+                button {
+                    margin: 0;
+                    height: 100%;
+                    padding: 0 1rem;
+                    width: max-content;
+                    p {
+                        display: none;
+                    }
+                    span {
+                        display: block;
+                    }
+                }
+            }
+        }
+    }
+
+    main .notes-main .notes-container {
+        .search-wrapper {
+            display: none;
+        }
+
+        .notes-wrapper {
+            padding: 0;
+        }
+    }
+
+    .notes-main {
+        padding-top: 1rem;
     }
 }
