--- a/Note-app-usingOOP/style.css
+++ b/Note-app-usingOOP/style.css
@@ -273,12 +273,15 @@ main .enter-note .container .btn-container .close:hover {
 
 @media (max-width: 768px) {
   main {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
   }
   main .left-nav {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    height: -moz-fit-content;
+    height: fit-content;
   }
   main .left-nav h1 {
     text-align: Left;
@@ -309,8 +312,7 @@ main .enter-note .container .btn-container .close:hover {
   }
   main .left-nav .container button {
     margin: 0;
-    height: 100%;
-    padding: 0 1rem;
+    padding: 1rem;
     width: -moz-max-content;
     width: max-content;
   }
