--- a/Note-app-usingOOP/style.scss
+++ b/Note-app-usingOOP/style.scss
@@ -324,12 +324,13 @@ main {
 
 @media (max-width:768px) {
     main {
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
         .left-nav {
-            
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            height: fit-content;
             h1 {
                 text-align: Left;
             }
@@ -361,8 +362,7 @@ main {
                 }
                 button {
                     margin: 0;
-                    height: 100%;
-                    padding: 0 1rem;
+                    padding: 1rem;
                     width: max-content;
                     p {
                         display: none;
